fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -7,6 +7,7 @@ border: 1px solid red;
 body{
 padding: 0;
 margin: 0;
+bottom: 0px;
 }
 
 h1 {
